# review-scraper

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
cli/: __init__.py  main.py
config/: __init__.py  logging_config.py  settings.py  sources.yaml
scripts/: adac_reviews.json  adac_reviews_training.json  adac_reviews_v3.json  adac_reviews_v3_training.json  adac_reviews_v4.json  adac_reviews_v4_training.json  adac_reviews_v5.json  adac_reviews_v5_training.json  adac_reviews_v6.json  adac_reviews_v6_training.json  adac_scraper_standalone.py  scrape_adac.py  scrape_adac_free.py  scrape_adac_v3.py  scrape_adac_v4.py  scrape_adac_v5.py  scrape_adac_v6.py  scrape_adac_verified.py
src/: __init__.py
src/antibot/: __init__.py  delays.py  headers.py  user_agents.py
src/core/: __init__.py  base_scraper.py  http_client.py  rate_limiter.py  retry_handler.py
src/models/: __init__.py  review.py  source.py
src/pipeline/: __init__.py  transformer.py  validator.py
src/scrapers/: __init__.py  finanzfluss_adac.py  registry.py  trustpilot_adac.py
src/scrapers/apps/: __init__.py  app_store.py  google_play.py  steam.py
src/scrapers/ecommerce/: __init__.py  amazon_de.py
src/scrapers/entertainment/: __init__.py  imdb.py
src/scrapers/forums/: __init__.py  gutefrage.py  motor_talk.py  reddit.py
src/scrapers/local/: __init__.py  gelbe_seiten.py  golocal.py  google_maps.py  kennstdueinen.py  scraper_11880.py  werkenntdenbesten.py  yelp_de.py
src/scrapers/maps/: __init__.py  google_maps.py  google_maps_serpapi.py
src/scrapers/review_platforms/: __init__.py  kununu.py  provenexpert.py  reclabox.py  sitejabber.py  trustpilot.py
src/storage/: __init__.py  base_storage.py  incremental.py  json_storage.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py
