[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-scraper"
version = "0.1.0"
description = "A modular web scraper for collecting customer reviews from multiple sources"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Lennard", email = "lennard@example.com" }
]
keywords = ["scraper", "reviews", "web-scraping", "data-collection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # HTTP & Async
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    
    # HTML Parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    
    # Browser Automation (optional, for JS-heavy sites)
    "playwright>=1.41.0",
    
    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    
    # Configuration
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    
    # Rate Limiting
    "aiolimiter>=1.1.0",
    
    # Logging
    "loguru>=0.7.2",
    
    # Text Processing
    "ftfy>=6.1.0",
    
    # Hashing for deduplication
    "xxhash>=3.4.0",
    
    # Fake data for anti-bot
    "fake-useragent>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
review-scraper = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true